--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.1.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "random-string": "^0.2.0"
   },
   "autoload": {
     "App": "./app"
